Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:05+0200\n"
+"PO-Revision-Date: 2010-07-15 06:07+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -599,7 +599,7 @@ msgstr ""
 
 #: db_structure.php:333
 msgid "Tracking is active."
-msgstr ""
+msgstr "ئاكتىپ ئىزلاش"
 
 #: db_structure.php:335
 msgid "Tracking is not active."
