--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:07+0200\n"
+"PO-Revision-Date: 2010-07-15 06:08+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -603,7 +603,7 @@ msgstr "ئاكتىپ ئىزلاش"
 
 #: db_structure.php:335
 msgid "Tracking is not active."
-msgstr ""
+msgstr "ئىزلاش ئاكتىپ ئەمەس"
 
 #: db_structure.php:420 libraries/display_tbl.lib.php:1944
 #, php-format
