--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:09+0200\n"
+"PO-Revision-Date: 2010-07-15 06:11+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -638,7 +638,7 @@ msgstr ""
 #: server_databases.php:351 server_privileges.php:1596 tbl_structure.php:455
 #: tbl_structure.php:464
 msgid "With selected:"
-msgstr ""
+msgstr "تاللانغىنى:"
 
 #: db_structure.php:527 libraries/display_tbl.lib.php:2076
 #: server_databases.php:348 server_privileges.php:569
