--- a/po/ug.po
+++ b/po/ug.po
@@ -644,7 +644,7 @@ msgstr "تاللانغىنى:"
 #: server_databases.php:348 server_privileges.php:569
 #: server_privileges.php:1599 tbl_structure.php:458
 msgid "Check All"
-msgstr ""
+msgstr "ھەممىنى تاللاش"
 
 #: db_structure.php:531 libraries/display_tbl.lib.php:2077
 #: libraries/replication_gui.lib.php:36 server_databases.php:350
