--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:15+0200\n"
+"PO-Revision-Date: 2010-07-15 06:16+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -665,7 +665,7 @@ msgstr "بېسىپ كۆرسىتىش"
 #: db_structure.php:549 db_structure.php:550 libraries/mult_submits.inc.php:42
 #: tbl_operations.php:581
 msgid "Check table"
-msgstr ""
+msgstr "جەدۋەل تەكشۈرۈش"
 
 #: db_structure.php:551 db_structure.php:552 libraries/mult_submits.inc.php:47
 #: tbl_operations.php:621 tbl_structure.php:709 tbl_structure.php:711
