Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:18+0200\n"
+"PO-Revision-Date: 2010-07-15 06:19+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -693,7 +693,7 @@ msgstr "چىقىرىش"
 
 #: db_structure.php:606 libraries/display_pdf_schema.lib.php:44
 msgid "Data Dictionary"
-msgstr ""
+msgstr "مەلۇمات لۇغىتى"
 
 #: db_tracking.php:66
 msgid "Tracked tables"
