--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:22+0200\n"
+"PO-Revision-Date: 2010-07-15 06:23+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -728,7 +728,7 @@ msgstr "يېڭلاش"
 #: server_privileges.php:1542 server_privileges.php:1725
 #: server_privileges.php:2073 tbl_structure.php:187
 msgid "Action"
-msgstr ""
+msgstr "ئامال"
 
 #: db_tracking.php:88 db_tracking.php:120
 msgid "Delete tracking data for this table"
