--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:23+0200\n"
+"PO-Revision-Date: 2010-07-15 06:24+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -737,7 +737,7 @@ msgstr ""
 #: db_tracking.php:106 tbl_tracking.php:548 tbl_tracking.php:606
 #: tbl_tracking.php:613
 msgid "active"
-msgstr ""
+msgstr "پائال"
 
 #: db_tracking.php:108 tbl_tracking.php:550 tbl_tracking.php:608
 #: tbl_tracking.php:610
