--- a/po/ug.po
+++ b/po/ug.po
@@ -742,7 +742,7 @@ msgstr "پائال"
 #: db_tracking.php:108 tbl_tracking.php:550 tbl_tracking.php:608
 #: tbl_tracking.php:610
 msgid "not active"
-msgstr ""
+msgstr "پائالسىز"
 
 #: db_tracking.php:121
 msgid "Versions"
