--- a/po/ug.po
+++ b/po/ug.po
@@ -746,7 +746,7 @@ msgstr "پائالسىز"
 
 #: db_tracking.php:121
 msgid "Versions"
-msgstr ""
+msgstr "نەشىر"
 
 #: db_tracking.php:122 tbl_tracking.php:379 tbl_tracking.php:624
 msgid "Tracking report"
