--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:24+0200\n"
+"PO-Revision-Date: 2010-07-15 06:25+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -750,7 +750,7 @@ msgstr "نەشىر"
 
 #: db_tracking.php:122 tbl_tracking.php:379 tbl_tracking.php:624
 msgid "Tracking report"
-msgstr ""
+msgstr "ئىزلاش خاتىرىسى"
 
 #: db_tracking.php:123 tbl_tracking.php:251 tbl_tracking.php:624
 msgid "Structure snapshot"
