--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:25+0200\n"
+"PO-Revision-Date: 2010-07-15 06:26+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -758,7 +758,7 @@ msgstr ""
 
 #: db_tracking.php:152
 msgid "Untracked tables"
-msgstr ""
+msgstr "ئىزلانمىغان جەدۋەللەر"
 
 #: db_tracking.php:172 db_tracking.php:174 tbl_structure.php:528
 #: tbl_structure.php:530
