Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:26+0200\n"
+"PO-Revision-Date: 2010-07-15 06:27+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -767,7 +767,7 @@ msgstr "جەدۋەل ئىزلاش"
 
 #: db_tracking.php:200
 msgid "Database Log"
-msgstr ""
+msgstr "ساندان خاتىرىسى"
 
 #: export.php:62
 msgid "Selected export type has to be saved in file!"
