--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 06:37+0200\n"
+"PO-Revision-Date: 2010-07-15 06:38+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -828,7 +828,7 @@ msgstr ""
 
 #: import.php:397
 msgid "The bookmark has been deleted."
-msgstr ""
+msgstr "خەتكۈچ ئۆچۈرۈلدى"
 
 #: import.php:401
 msgid "Showing bookmark"
