--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 10:59+0200\n"
+"PO-Revision-Date: 2010-07-15 11:47+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -754,7 +754,7 @@ msgstr "ئىزلاش خاتىرىسى"
 
 #: db_tracking.php:123 tbl_tracking.php:251 tbl_tracking.php:624
 msgid "Structure snapshot"
-msgstr ""
+msgstr "تۈزۈلمە رەسىمى"
 
 #: db_tracking.php:152
 msgid "Untracked tables"
