Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 11:47+0200\n"
+"PO-Revision-Date: 2010-07-15 11:48+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -771,7 +771,7 @@ msgstr "ساندان خاتىرىسى"
 
 #: export.php:62
 msgid "Selected export type has to be saved in file!"
-msgstr ""
+msgstr "چىقارماقچى بولغان ھۆججەت تۈرىنى تاللاڭ!"
 
 #: export.php:154 export.php:179 export.php:627
 #, php-format
