--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 12:01+0200\n"
+"PO-Revision-Date: 2010-07-15 12:03+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -890,7 +890,7 @@ msgstr "ساندان تولۇق ئۆچۈرۈلدى!"
 
 #: js/messages.php:34
 msgid "You are about to DISABLE a BLOB Repository!"
-msgstr ""
+msgstr "سىز BLOB ئامبىرنى توقتاتماقچى!"
 
 #: js/messages.php:35
 #, php-format
