--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 12:03+0200\n"
+"PO-Revision-Date: 2010-07-15 12:05+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -899,7 +899,7 @@ msgstr ""
 
 #: js/messages.php:38
 msgid "Missing value in the form!"
-msgstr ""
+msgstr "بۇ ئورۇننىڭ قىممىتى تولدۇرۇلمىغان !"
 
 #: js/messages.php:39
 msgid "This is not a number!"
