--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 12:05+0200\n"
+"PO-Revision-Date: 2010-07-15 12:06+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -903,7 +903,7 @@ msgstr "بۇ ئورۇننىڭ قىممىتى تولدۇرۇلمىغان !"
 
 #: js/messages.php:39
 msgid "This is not a number!"
-msgstr ""
+msgstr "سان كىرگۈزىڭ !"
 
 #: js/messages.php:42
 msgid "The host name is empty!"
