--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 12:07+0200\n"
+"PO-Revision-Date: 2010-07-15 12:10+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -911,7 +911,7 @@ msgstr "مۇلازىمىتېر ئىسمى بوشكەن!"
 
 #: js/messages.php:43
 msgid "The user name is empty!"
-msgstr ""
+msgstr "قوللانغۇچى ئىسمى بوشكەن!"
 
 #: js/messages.php:44 server_privileges.php:1236 user_password.php:70
 msgid "The password is empty!"
