--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 12:11+0200\n"
+"PO-Revision-Date: 2010-07-15 12:12+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -919,7 +919,7 @@ msgstr "پارول بوشكەن!"
 
 #: js/messages.php:45 server_privileges.php:1234 user_password.php:73
 msgid "The passwords aren't the same!"
-msgstr ""
+msgstr "كىرگۈزگەن پارولار ئوخشاش ئەمەس!"
 
 #: js/messages.php:49 pmd_general.php:342 pmd_general.php:379
 msgid "Cancel"
