Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-15 12:12+0200\n"
+"PO-Revision-Date: 2010-07-15 12:13+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -923,7 +923,7 @@ msgstr "كىرگۈزگەن پارولار ئوخشاش ئەمەس!"
 
 #: js/messages.php:49 pmd_general.php:342 pmd_general.php:379
 msgid "Cancel"
-msgstr ""
+msgstr "بىكار قىلىش"
 
 #: js/messages.php:52 pmd_save_pos.php:54
 msgid "Modifications have been saved"
