--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 05:43+0200\n"
+"PO-Revision-Date: 2010-07-16 06:22+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -530,7 +530,7 @@ msgstr "سانداندىن ئىزدەش"
 
 #: db_search.php:302
 msgid "Word(s) or value(s) to search for (wildcard: \"%\"):"
-msgstr ""
+msgstr "ئىزدەشكە تىگىشلىك خەت ياكى قىقىممىتى(دەرىجىسى:«%»"
 
 #: db_search.php:307
 msgid "Find:"
