--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:25+0200\n"
+"PO-Revision-Date: 2010-07-16 06:26+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -778,7 +778,7 @@ msgstr "چىقارماقچى بولغان ھۆججەت تۈرىنى تاللاڭ
 #: export.php:154 export.php:179 export.php:627
 #, php-format
 msgid "Insufficient space to save the file %s."
-msgstr ""
+msgstr "ھۆججەتنى ساقلاشقا يىتەرلىك بوشلۇق يوق %s。"
 
 #: export.php:294
 #, php-format
