--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:28+0200\n"
+"PO-Revision-Date: 2010-07-16 06:29+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -937,7 +937,7 @@ msgstr "باغلانمىلار ئۆچۈرۈلدى"
 
 #: js/messages.php:54 pmd_relation_new.php:64
 msgid "FOREIGN KEY relation added"
-msgstr "مۇناسىۋەتلىك ئۇلانما قۇشۇلدى"
+msgstr "سىرتقى مۇناسىۋەتلىك ئۇلانما قۇشۇلدى"
 
 #: js/messages.php:55 pmd_relation_new.php:86
 msgid "Internal relation added"
