--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:30+0200\n"
+"PO-Revision-Date: 2010-07-16 06:31+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -949,7 +949,7 @@ msgstr "خاتالىق:مۇناسىۋەت قۇشۇلمىغان"
 
 #: js/messages.php:57 pmd_relation_new.php:31
 msgid "Error: relation already exists."
-msgstr "خاتالىق:بۇناسىۋەت ئاللىقاچان مەۋجۈت"
+msgstr "!خاتالىق:بۇناسىۋەت ئاللىقاچان مەۋجۈت"
 
 #: js/messages.php:58
 msgid "Error saving coordinates for Designer."
