--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:32+0200\n"
+"PO-Revision-Date: 2010-07-16 06:38+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1026,7 +1026,7 @@ msgstr ""
 
 #: js/messages.php:87
 msgid "June"
-msgstr ""
+msgstr "6-ئاي"
 
 #: js/messages.php:88
 msgid "July"
