--- a/po/ug.po
+++ b/po/ug.po
@@ -1038,7 +1038,7 @@ msgstr "8-ئاي"
 
 #: js/messages.php:90
 msgid "September"
-msgstr ""
+msgstr "9-ئاي"
 
 #: js/messages.php:91
 msgid "October"
