--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:38+0200\n"
+"PO-Revision-Date: 2010-07-16 06:39+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1042,7 +1042,7 @@ msgstr "9-ئاي"
 
 #: js/messages.php:91
 msgid "October"
-msgstr ""
+msgstr "10-ئاي"
 
 #: js/messages.php:92
 msgid "November"
