--- a/po/ug.po
+++ b/po/ug.po
@@ -1055,7 +1055,7 @@ msgstr "12-ئاي"
 #. l10n: Short month name
 #: js/messages.php:97 libraries/common.lib.php:1557
 msgid "Jan"
-msgstr ""
+msgstr "1-ئاي"
 
 #. l10n: Short month name
 #: js/messages.php:99 libraries/common.lib.php:1559
