--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:39+0200\n"
+"PO-Revision-Date: 2010-07-16 06:40+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1070,7 +1070,7 @@ msgstr "3-ئاي"
 #. l10n: Short month name
 #: js/messages.php:103 libraries/common.lib.php:1563
 msgid "Apr"
-msgstr ""
+msgstr "4-ئاي"
 
 #. l10n: Short month name
 #: js/messages.php:105 libraries/common.lib.php:1565
