--- a/po/ug.po
+++ b/po/ug.po
@@ -1076,7 +1076,7 @@ msgstr "4-ئاي"
 #: js/messages.php:105 libraries/common.lib.php:1565
 msgctxt "Short month name"
 msgid "May"
-msgstr ""
+msgstr "5-ئاي"
 
 #. l10n: Short month name
 #: js/messages.php:107 libraries/common.lib.php:1567
