Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1154,7 +1154,7 @@ msgstr "دۈشەنبە"
 #. l10n: Short week day name
 #: js/messages.php:136 libraries/common.lib.php:1586
 msgid "Tue"
-msgstr ""
+msgstr "سەيشەنبە"
 
 #. l10n: Short week day name
 #: js/messages.php:138 libraries/common.lib.php:1588
