--- a/po/ug.po
+++ b/po/ug.po
@@ -1214,7 +1214,7 @@ msgstr ""
 #. l10n: Column header for week of the year in calendar
 #: js/messages.php:162
 msgid "Wk"
-msgstr ""
+msgstr "ھەپتە"
 
 #: js/messages.php:164
 msgid "Hour"
