--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:42+0200\n"
+"PO-Revision-Date: 2010-07-16 06:43+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1222,7 +1222,7 @@ msgstr "سائەت"
 
 #: js/messages.php:165
 msgid "Minute"
-msgstr ""
+msgstr "مىنۇت"
 
 #: js/messages.php:166
 msgid "Second"
