--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:45+0200\n"
+"PO-Revision-Date: 2010-07-16 06:46+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1282,7 +1282,7 @@ msgstr ""
 #: tbl_structure.php:155 tbl_structure.php:159 tbl_structure.php:474
 #: tbl_tracking.php:322
 msgid "Unique"
-msgstr ""
+msgstr "بىردىنبىر"
 
 #: libraries/Index.class.php:445 tbl_tracking.php:323
 msgid "Packed"
