--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:46+0200\n"
+"PO-Revision-Date: 2010-07-16 06:47+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1290,7 +1290,7 @@ msgstr "ئىخچام"
 
 #: libraries/Index.class.php:447 tbl_tracking.php:325
 msgid "Cardinality"
-msgstr ""
+msgstr "تۈپ سان"
 
 #: libraries/Index.class.php:450 tbl_tracking.php:279 tbl_tracking.php:328
 msgid "Comment"
