--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 06:48+0200\n"
-"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
+"PO-Revision-Date: 2010-07-16 07:43+0200\n"
+"Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -592,7 +592,7 @@ msgstr " %s جەدۋەل تازىلاندى"
 #: db_structure.php:326 libraries/tbl_links.inc.php:133
 #, php-format
 msgid "View %s has been dropped"
-msgstr ""
+msgstr "%s كۆرۈنمە ئۆچۈرۈلدى"
 
 #: db_structure.php:326 libraries/tbl_links.inc.php:133
 #, php-format
