--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 07:47+0200\n"
+"PO-Revision-Date: 2010-07-16 07:48+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -794,7 +794,7 @@ msgstr ""
 #: export.php:629
 #, php-format
 msgid "Dump has been saved to file %s."
-msgstr ""
+msgstr "%s ھۆججىتىدە ساقلاندى."
 
 #: import.php:60
 #, php-format
