--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 08:52+0200\n"
-"Last-Translator:  <gheni@yahoo.cn>\n"
+"PO-Revision-Date: 2010-07-16 10:51+0200\n"
+"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -7737,7 +7737,7 @@ msgstr ""
 
 #: tbl_tracking.php:688
 msgid "Create version"
-msgstr ""
+msgstr "نەشىرنى قۇىماق"
 
 #: themes.php:32
 #, php-format
