--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 10:51+0200\n"
+"PO-Revision-Date: 2010-07-16 10:53+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -7744,7 +7744,7 @@ msgstr "نەشىرنى قۇىماق"
 msgid ""
 "No themes support; please check your configuration and/or your themes in "
 "directory %s."
-msgstr ""
+msgstr " %sتېمىنى قوللىمايدۇ،تەڭشەك ۋە تېما ھۆججەت قىسقۇچنى تەكشۈرۈڭ"
 
 #: themes.php:42
 msgid "Get more themes!"
