--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 10:53+0200\n"
+"PO-Revision-Date: 2010-07-16 10:54+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -7752,7 +7752,7 @@ msgstr "تېخىمۇ كۆپ تېمىغا ئىرىشىش !"
 
 #: transformation_overview.php:25
 msgid "Available MIME types"
-msgstr ""
+msgstr "MIMEشەكلىنى ئىشلىتەلەيسىز"
 
 #: transformation_overview.php:38
 msgid ""
