--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 10:55+0200\n"
+"PO-Revision-Date: 2010-07-16 12:09+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -966,7 +966,7 @@ msgstr ""
 
 #: js/messages.php:60
 msgid "Select referenced key"
-msgstr ""
+msgstr "سېرتقى ئۇلىنىشنى تاللاش"
 
 #: js/messages.php:61
 msgid "Select Foreign Key"
