--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 12:09+0200\n"
+"PO-Revision-Date: 2010-07-16 12:10+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -988,7 +988,7 @@ msgstr ""
 #. l10n: Display text for previous month link in calendar
 #: js/messages.php:75
 msgid "Prev"
-msgstr ""
+msgstr "ئالدىنقى ئاي"
 
 #. l10n: Display text for next month link in calendar
 #: js/messages.php:77 libraries/common.lib.php:2353
