--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 12:10+0200\n"
+"PO-Revision-Date: 2010-07-16 12:11+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -996,7 +996,7 @@ msgstr "ئالدىنقى ئاي"
 #: server_binlog.php:205 server_binlog.php:207 tbl_printview.php:423
 #: tbl_structure.php:801
 msgid "Next"
-msgstr ""
+msgstr "كىيىنكى ئاي"
 
 #. l10n: Display text for current month link in calendar
 #: js/messages.php:79
