Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1001,7 +1001,7 @@ msgstr "كىيىنكى ئاي"
 #. l10n: Display text for current month link in calendar
 #: js/messages.php:79
 msgid "Today"
-msgstr ""
+msgstr "بۈگۈن"
 
 #: js/messages.php:82
 msgid "January"
