--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 12:15+0200\n"
+"PO-Revision-Date: 2010-07-16 12:16+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1163,7 +1163,7 @@ msgstr "چارشەنبە"
 #. l10n: Short week day name
 #: js/messages.php:140 libraries/common.lib.php:1590
 msgid "Thu"
-msgstr ""
+msgstr "پەيشەنبە"
 
 #. l10n: Short week day name
 #: js/messages.php:142 libraries/common.lib.php:1592
