--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 12:16+0200\n"
+"PO-Revision-Date: 2010-07-16 12:17+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1178,7 +1178,7 @@ msgstr "شەنبە"
 #. l10n: Minimal week day name
 #: js/messages.php:148
 msgid "Su"
-msgstr ""
+msgstr "يەكشەنبە"
 
 #. l10n: Minimal week day name
 #: js/messages.php:150
