--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:05+0200\n"
+"PO-Revision-Date: 2010-07-16 13:09+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -792,7 +792,7 @@ msgstr ""
 #: export.php:298 export.php:302
 #, php-format
 msgid "The web server does not have permission to save the file %s."
-msgstr ""
+msgstr "بۇ %s ھۆججەتنى  مۇلازىمىتېردا ساقلاش ھوقۇقىڭىز يېتەرسىز."
 
 #: export.php:629
 #, php-format
