--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:38+0200\n"
+"PO-Revision-Date: 2010-07-16 13:40+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -974,7 +974,7 @@ msgstr "سېرتقى ئۇلىنىشنى تاللاش"
 
 #: js/messages.php:61
 msgid "Select Foreign Key"
-msgstr ""
+msgstr "تاشقى ئاچقۇق قىممىتى"
 
 #: js/messages.php:62
 msgid "Please select the primary key or a unique key"
