Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -988,7 +988,7 @@ msgstr "سۆزلەمنى كۆرسەتمەسلىك"
 #. l10n: Display text for calendar close link
 #: js/messages.php:73
 msgid "Done"
-msgstr ""
+msgstr "تامام"
 
 #. l10n: Display text for previous month link in calendar
 #: js/messages.php:75
