--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:41+0200\n"
+"PO-Revision-Date: 2010-07-16 13:42+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1010,7 +1010,7 @@ msgstr "بۈگۈن"
 
 #: js/messages.php:82
 msgid "January"
-msgstr ""
+msgstr "قەھرىتان"
 
 #: js/messages.php:83
 msgid "February"
