--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:42+0200\n"
+"PO-Revision-Date: 2010-07-16 13:43+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1026,7 +1026,7 @@ msgstr "ئۈمىد"
 
 #: js/messages.php:86
 msgid "May"
-msgstr ""
+msgstr "باھار"
 
 #: js/messages.php:87
 msgid "June"
