--- a/po/ug.po
+++ b/po/ug.po
@@ -1095,7 +1095,7 @@ msgstr "چىللە"
 #. l10n: Short month name
 #: js/messages.php:111 libraries/common.lib.php:1571
 msgid "Aug"
-msgstr ""
+msgstr "تومۇز"
 
 #. l10n: Short month name
 #: js/messages.php:113 libraries/common.lib.php:1573
