--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-14 11:36+0200\n"
-"PO-Revision-Date: 2010-07-16 13:43+0200\n"
+"PO-Revision-Date: 2010-07-16 13:44+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1105,7 +1105,7 @@ msgstr "مىزان"
 #. l10n: Short month name
 #: js/messages.php:115 libraries/common.lib.php:1575
 msgid "Oct"
-msgstr ""
+msgstr "ئوغۇز"
 
 #. l10n: Short month name
 #: js/messages.php:117 libraries/common.lib.php:1577
